# urlps

./: .rgignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
changelogs/: 0.5.0.md  0.5.1.md  0.6.0.md
performance/: run_cprofile.py
schema/: audit_event.json
src/urlps/: __init__.py  _audit.py  _builder.py  _components.py  _patterns.py  _relative.py  constants.py  exceptions.py  security_policy.py  url.py
src/urlps/_security/: __init__.py  dns_guard.py  ip_utils.py  phishing_db.py  policy.py  url_checks.py
tests/: conftest.py  test_builder.py  test_constants_env_overrides.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_exceptions.py  test_facade.py  test_limits.py  test_rfc3986_compliance.py  test_security_credentials.py  test_security_dangerous_ports.py  test_security_dns.py  test_security_dns_rate_limit.py  test_security_fuzzing.py  test_security_ip_formats.py  test_security_parser_confusion.py  test_security_phishing.py  test_security_policy_features.py  test_security_punycode.py  test_security_query_injection.py  test_security_round2.py  test_security_unicode_normalization.py  test_url.py  test_validation_idna_ipv4.py
tests/builder/: test_builder.py  test_builder_additional.py
tests/constants/: test_constants_env_overrides.py
tests/exceptions/: test_exceptions.py  test_exceptions_additional.py
tests/facade/: test_facade_additional.py  test_import_path.py
tests/parser/: test_parser.py  test_parser_additional.py
tests/relative/: test_relative.py
tests/rfc3986/: test_rfc3986_compliance.py  test_rfc3986_extended.py
tests/security/: test_security_additional.py  test_security_canonical.py  test_security_canonical_additional.py  test_security_credentials.py  test_security_dangerous_ports.py  test_security_dangerous_schemes.py  test_security_dns.py  test_security_dns_additional.py  test_security_fuzzing.py  test_security_ip_formats.py  test_security_ip_utils_additional.py  test_security_ipv6_zone_id.py  test_security_ipv6_zone_id_additional.py  test_security_parser_confusion.py  test_security_phishing.py  test_security_policy_additional.py  test_security_policy_features.py  test_security_punycode.py  test_security_punycode_additional.py  test_security_query_injection.py  test_security_query_injection_additional.py  test_security_round2.py  test_security_unicode_normalization.py  test_security_url_checks_additional.py
tests/url/: test_url.py  test_url_additional.py  test_url_comparison.py
tests/validation/: test_ipv6_edgecases_more.py  test_limits.py  test_validation.py  test_validation_additional.py  test_validation_comprehensive.py  test_validation_idna_ipv4.py  test_validation_ipv6_encoding.py
urlps/: __init__.py  _components.py  _parser.py  _security.py  _validation.py  exceptions.py
