[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlps"
description = "Lightweight URL parsing and building helpers (RFC 3986-like)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "urlps maintainers" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["url", "parser", "builder", "rfc3986", "validation", "idna", "ipv6", "punycode", "ipv4"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
idna = ["idna>=3.11"]
dev = ["pytest>=7.4", "mypy>=1.19", "bandit>=1.9", "idna>=3.11"]

[project.urls]
Homepage = "https://github.com/micro/urlps"
Repository = "https://github.com/micro/urlps"
Documentation = "https://github.com/micro/urlps#readme"
Changelog = "https://github.com/micro/urlps/blob/main/changelogs/0.5.1.md"
Issues = "https://github.com/micro/urlps/issues"
"Bug Tracker" = "https://github.com/micro/urlps/issues"

[tool.setuptools.packages.find]
include = ["src.urlps*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "src.urlps.__version__"}

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".git", "__pycache__", ".venv"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "--cov=src.urlps", "--cov-report=html", "--cov-report=term-missing"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "ipv6: marks IPv6-related tests",
    "idna: marks IDNA-related tests",
    "rfc3986: marks RFC 3986 compliance tests",
]

[tool.coverage.run]
source = ["src.urlps"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

